# Programming-technology

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: keeper.h  novelist.h  poet.h  printEdition.h  scifiwriter.h  user.h
src/: database.cpp  keeper.cpp  main.cpp  novelist.cpp  poet.cpp  printedition.cpp  scifiwriter.cpp  user.cpp
src/entity/: poet.cpp  poet.h  user.cpp  user.h
